
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct sctp_sndrcvinfo {int dummy; } ;
struct sctp_initmsg {int sinit_num_ostreams; int sinit_max_instreams; int sinit_max_attempts; } ;
typedef int servaddr ;
typedef int initmsg ;
typedef int buffer ;


 int AF_INET ;
 int INADDR_ANY ;
 int IPPROTO_SCTP ;
 int MY_PORT_NUM ;
 int SCTP_INITMSG ;
 int SOCK_STREAM ;
 int accept (int,struct sockaddr*,int *) ;
 int bind (int,struct sockaddr*,int) ;
 int close (int) ;
 int htonl (int ) ;
 int htons (int ) ;
 int listen (int,int) ;
 int printf (char*,...) ;
 int sctp_recvmsg (int,char*,int,int *,int ,struct sctp_sndrcvinfo*,int*) ;
 scalar_t__ servser_stop_flag ;
 int setsockopt (int,int ,int ,struct sctp_initmsg*,int) ;
 int sleep (int) ;
 int socket (int ,int ,int ) ;

__attribute__((used)) static void *server_thread(void *arg) {
    int listen_fd, conn_fd, flags, ret, in;
    char buffer[1024];
    struct sctp_sndrcvinfo sndrcvinfo;
    struct sockaddr_in servaddr = {
            .sin_family = AF_INET,
            .sin_addr.s_addr = htonl(INADDR_ANY),
            .sin_port = htons(MY_PORT_NUM),
    };
    struct sctp_initmsg initmsg = {
            .sinit_num_ostreams = 5,
            .sinit_max_instreams = 5,
            .sinit_max_attempts = 4,
    };

    listen_fd = socket(AF_INET, SOCK_STREAM, IPPROTO_SCTP);
    if (listen_fd < 0)
        return ((void*)0);

    ret = bind(listen_fd, (struct sockaddr *) &servaddr, sizeof(servaddr));
    if (ret < 0)
        return ((void*)0);

    ret = setsockopt(listen_fd, IPPROTO_SCTP, SCTP_INITMSG, &initmsg, sizeof(initmsg));
    if (ret < 0)
        return ((void*)0);

    ret = listen(listen_fd, initmsg.sinit_max_instreams);
    if (ret < 0)
        return ((void*)0);

    printf("[] Waiting for connection\n");

    conn_fd = accept(listen_fd, (struct sockaddr *) ((void*)0), ((void*)0));
    if(conn_fd < 0)
        return ((void*)0);

    printf("[] New client connected\n");

    in = sctp_recvmsg(conn_fd, buffer, sizeof(buffer), ((void*)0), 0, &sndrcvinfo, &flags);
    if (in > 0) {
        printf("[] Received data: %s\n", buffer);
    }

    while (servser_stop_flag == 0)
        sleep(1);

    close(conn_fd);
    return ((void*)0);
}
